# idea_recommendation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
docs/: IMPROVEMENT_PLAN.md
examples/: run.sh
idea_generator/: __init__.py  __main__.py  cli.py  core.py  expansion.py  llm.py  novelty.py  prompts.py  research_pipeline.py  structured_outputs.py  validators.py
idea_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
idea_generator/tools/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py  pubmed.py  semantic_scholar.py  tavily.py
idea_generator/utils/: checkpoint.py  token_tracker.py
output/: gan_optimization_adoe.critique.json  gan_optimization_adoe.direction.json  gan_optimization_adoe.experiment_plan.json  gan_optimization_adoe.feasibility.json  gan_optimization_adoe.hypotheses.json  gan_optimization_adoe.json  gan_optimization_adoe.lit_review.json
output_260215/: gan_optimization_adoe.direction.json  gan_optimization_adoe.feasibility.json  gan_optimization_adoe.hypotheses.json  gan_optimization_adoe.lit_review.json
output_260215_2/: gan_optimization_adoe.feasibility.json
topics/: example_icbinb.md  example_ml_general.md
